@@ -33,17 +33,20 @@ Configuration::Configuration()
 
 	CK2Path		= obj[0]->getLeaf("CK2directory");
 	EU3Path		= obj[0]->getLeaf("EU3directory");
-	proxyMultiplierMethod = obj[0]->getLeaf("proxyMultiplierMethod");
-	multipleProvsMethod = obj[0]->getLeaf("multipleProvsMethod");
-	manpower		= obj[0]->getLeaf("manpower");
+
+	techGroupMethod	= obj[0]->getLeaf("techGroupMethod");
+
+	proxyMultiplierMethod	= obj[0]->getLeaf("proxyMultiplierMethod");
+	multipleProvsMethod		= obj[0]->getLeaf("multipleProvsMethod");
+	manpower						= obj[0]->getLeaf("manpower");
 	manpowerblendamount		= obj[0]->getLeaf("manpowerblendamount");
-	basetax		= obj[0]->getLeaf("basetax");
+	basetax						= obj[0]->getLeaf("basetax");
 	basetaxblendamount		= obj[0]->getLeaf("basetaxblendamount");
-	population	= obj[0]->getLeaf("population");
+	population					= obj[0]->getLeaf("population");
 	populationblendamount	= obj[0]->getLeaf("populationblendamount");
-	HRETitle		= obj[0]->getLeaf("HRETitle");
-	mergeTitles	= obj[0]->getLeaf("mergeTitles");
-	vassalScore	= obj[0]->getLeaf("vassalScore");
+	HRETitle						= obj[0]->getLeaf("HRETitle");
+	mergeTitles					= obj[0]->getLeaf("mergeTitles");
+	vassalScore					= obj[0]->getLeaf("vassalScore");
 
 	advisors				= obj[0]->getLeaf("advisors");
 	leaders				= obj[0]->getLeaf("leaders");
